--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@expo/vector-icons": "^14.0.2",
     "@hookform/error-message": "^2.0.1",
     "@hookform/resolvers": "^3.9.0",
-    "@react-native-picker/picker": "^2.7.7",
+    "@react-native-community/datetimepicker": "8.0.1",
+    "@react-native-picker/picker": "2.7.5",
     "@react-navigation/material-top-tabs": "^6.6.14",
     "@react-navigation/native": "^6.0.2",
     "expo": "~51.0.26",
@@ -34,7 +35,9 @@
     "react-hook-form": "^7.52.2",
     "react-native": "0.74.5",
     "react-native-check-box": "^2.1.7",
+    "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-pager-view": "6.3.0",
+    "react-native-picker-select": "^9.3.0",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
