--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "react-native-uuid": "^2.0.2",
     "react-native-web": "~0.19.10",
     "recoil": "^0.7.7",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "react-native-svg": "15.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
