--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "@react-native-picker/picker": "2.7.5",
     "@react-navigation/material-top-tabs": "^6.6.14",
     "@react-navigation/native": "^6.0.2",
+    "babel-plugin-inline-import": "^3.0.0",
+    "drizzle-orm": "^0.33.0",
     "expo": "~51.0.26",
     "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.21",
     "expo-splash-screen": "~0.27.5",
-    "expo-sqlite": "~14.0.6",
+    "expo-sqlite": "^14.0.6",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
@@ -41,17 +43,18 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
+    "react-native-svg": "15.2.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-uuid": "^2.0.2",
     "react-native-web": "~0.19.10",
     "recoil": "^0.7.7",
-    "zod": "^3.23.8",
-    "react-native-svg": "15.2.0"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
     "@types/react-native-check-box": "^2.1.6",
+    "drizzle-kit": "^0.24.0",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
     "react-test-renderer": "18.2.0",
