--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-plugin-inline-import": "^3.0.0",
     "drizzle-orm": "^0.33.0",
     "expo": "~51.0.28",
+    "expo-drizzle-studio-plugin": "^0.0.2",
     "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.23",
