--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-navigation/material-top-tabs": "^6.6.14",
     "@react-navigation/native": "^6.0.2",
     "babel-plugin-inline-import": "^3.0.0",
+    "date-fns": "^3.6.0",
     "drizzle-orm": "^0.33.0",
     "drizzle-zod": "^0.5.1",
     "expo": "~51.0.28",
@@ -50,6 +51,7 @@
     "react-native-uuid": "^2.0.2",
     "react-native-web": "~0.19.10",
     "recoil": "^0.7.7",
+    "victory-native": "^37.0.3-next.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
