--- a/app.json
+++ b/app.json
@@ -5,7 +5,7 @@
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/app-icon.png",
-    "scheme": "myapp",
+    "scheme": "DreamDigger",
     "userInterfaceStyle": "automatic",
     "splash": {
       "image": "./assets/images/splash.png",
