--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0",
+    "react-native-swiper-flatlist": "^3.2.4",
     "react-native-tab-view": "^3.5.2",
     "react-native-uuid": "^2.0.2",
     "react-native-web": "~0.19.10",
