--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@expo/vector-icons": "^14.0.2",
     "@hookform/error-message": "^2.0.1",
     "@hookform/resolvers": "^3.9.0",
-    "@react-native-async-storage/async-storage": "^2.0.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/datetimepicker": "8.0.1",
     "@react-native-picker/picker": "2.7.5",
     "@react-navigation/material-top-tabs": "^6.6.14",
@@ -25,8 +25,7 @@
     "date-fns": "^3.6.0",
     "drizzle-orm": "^0.33.0",
     "drizzle-zod": "^0.5.1",
-    "expo": "~51.0.28",
-    "expo-drizzle-studio-plugin": "^0.0.2",
+    "expo": "~51.0.31",
     "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.23",
@@ -62,7 +61,7 @@
     "@types/react-native-check-box": "^2.1.6",
     "drizzle-kit": "^0.24.0",
     "jest": "^29.2.1",
-    "jest-expo": "~51.0.3",
+    "jest-expo": "~51.0.4",
     "react-test-renderer": "18.2.0",
     "tailwindcss": "^3.3.2",
     "typescript": "~5.3.3"
