--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "dreamdigger",
   "main": "expo-router/entry",
-  "version": "1.4.0",
+  "version": "1.5.0",
   "scripts": {
     "start": "expo start",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
-    "test": "jest --watchAll"
+    "test": "jest --watchAll",
+    "build:ios": "eas build --platform ios "
   },
   "jest": {
     "preset": "jest-expo"
@@ -53,7 +54,8 @@
     "react-native-web": "~0.19.10",
     "recoil": "^0.7.7",
     "victory-native": "^37.0.3-next.0",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "expo-updates": "~0.25.24"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
