--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "expo": "^52.0.27",
     "expo-font": "~13.0.3",
     "expo-linking": "~7.0.4",
+    "expo-notifications": "~0.29.12",
     "expo-router": "~4.0.17",
     "expo-splash-screen": "~0.29.21",
     "expo-sqlite": "~15.0.6",
@@ -55,14 +56,13 @@
     "react-native-web": "~0.19.13",
     "recoil": "^0.7.7",
     "victory-native": "^37.0.3-next.0",
-    "zod": "^3.23.8",
-    "expo-notifications": "~0.29.12"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.3.12",
     "@types/react-native-check-box": "^2.1.6",
-    "drizzle-kit": "^0.24.2",
+    "drizzle-kit": "^0.30.2",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.3",
     "react-test-renderer": "18.2.0",
