レビューを書く動線を設置  #10

--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
     "react-native-web": "~0.19.13",
     "recoil": "^0.7.7",
     "victory-native": "^37.0.3-next.0",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "expo-store-review": "~8.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
